Revision history for Date-Easy

{{$NEXT}}

0.09      2019-09-03 16:34:03-07:00 America/Los_Angeles

    [Docs]
    * Reviewed all POD and fixed a few typos
    * Fixed a POD link (github #13--thx manwar)

    [Distro Fixes]
    * Fix format test so it can handle weird chars in default format
      github #9 (thx richlv)

0.08      2019-06-28 17:42:42-07:00 America/Los_Angeles

    [Efficiency Improvements]
    * resimplify `strftime` implementation to simple delegation
      this made possible by the fixing of Time::Piece GitHub #24 (thx ESAYM!)
      that fix means we must require at least 1.32 of Time::Piece

    [Distro Fixes]
    * Fix Kwalitee issues
      github #11 (thx Zak B. Elep (ZAKAME))
    * Fix failing unit test caused by bug in `str2time`
      github #12 (thx Slaven Rezić (SREZIC))
    * Correct broken distro (no `provides` in META.*)

0.07      2019-04-16 00:33:10-07:00 America/Los_Angeles

    -- broken distro --

0.06      2018-06-15 22:34:29-07:00 America/Los_Angeles

    [Bug Fixes]
    * workaround for upstream bug in Date::Parse [base bug RT/53413]
      now doing a more faithful recreation of D::P's strptime
      and using it for both dates and datetimes

0.05      2018-05-31 02:50:30-07:00 America/Los_Angeles

    [New Features]
    * Can now subtract one datetime from another (gives seconds).
    * Can now subtract one date from another (gives days).

    [Distro Fixes]
    * Change date-parse unit tests to calculate epoch dates
      so they work in all timezones.
      github #10 (thx Ron Savage (RSAVAGE))

0.04      2017-07-27 17:47:54-07:00 America/Los_Angeles

    [Bug Fixes]
    * `add_months` was returning a Time::Piece instead of a Date::Easy
      object (fixed)

    [New Features]
    * New `day_of_year` method
      returns day of year (1-366)
    * New `split` method
      splits to (Y, m, d) for date, (Y, m, d, H, M, S) for datetime
    * New methods: `add_seconds`, `subtract_seconds`, `add_minutes`,